1.0.1. Rename entities, dto and other classes (#3).